# world-study

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs
data/: Cargo.toml  countries.json
data/files/: countries.json
data/src/: country.rs  generic.rs  lib.rs  traits.rs
data/src/country/: meshes.rs
data/src/generic/: data_map.rs  identified_polygon.rs  position.rs
data/src/traits/: has_id.rs
src/: app.rs  data.rs  main.rs  ui.rs
src/app/: components.rs  persistence.rs  views.rs
src/app/components/: custom_button.rs  quiz.rs  settings_slider.rs  value_reset_button.rs  world_map.rs
src/app/components/quiz/: flag_name_country.rs  settings.rs  stats.rs  types.rs
src/app/components/quiz/settings/: flag_name_country.rs
src/app/persistence/: persistent_object.rs
src/app/styles/: button_size.rs  text_size.rs
src/app/views/: explore.rs  main_menu.rs  quiz_menu.rs  quiz_run.rs  study_menu.rs
src/app/views/explore/: big_flag.rs  debug.rs  details.rs
src/data/: identified_polygon.rs  meshes.rs  outlines.rs  polygon_tree.rs
src/ui/: components.rs  styles.rs  views.rs
src/ui/components/: custom_button.rs  world_map.rs
src/ui/styles/: button_size.rs  generic_size.rs  text_size.rs
src/ui/views/: country_study.rs  explore.rs  main_menu.rs
src/ui/views/explore/: big_flag.rs  debug.rs  details.rs
src/utils/: time.rs
tools/: Cargo.toml
tools/data/: all_countries.json  countries_extra.json
tools/src/: models.rs
tools/src/models/: all_countries_entry.rs  countries_extra.rs
tools/src/models/all_countries_entry/: maps.rs  name.rs
(+2 files in other folders)
