[package]
name = "world-study"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
eframe = "0.31.1"
egui = "0.31.1"
flate2 = "1.1.1"
once_cell = "1.21.3"
world-study-data = { path = "data" }

[build-dependencies]
bincode = "1.3.3"
flate2 = "1.1.1"
world-study-data = { path = "data" }
